The logo images were missing in r297. However, that's fine, because we now use cropped version of the JRC logo (the original was needlessly wide) and with the correct extension. Also, a couple of small changes for future IE compatibility.

--- a/qmrf-war/src/main/webapp/style/ambit.css
+++ b/qmrf-war/src/main/webapp/style/ambit.css
@@ -445,7 +445,11 @@ td.contentTableManageR {
 	padding: 0.1em 0.5em 0.1em 0;
 }
 
-img.ieSux {
+a.updateLinkOnIE {
+	position: relative;
+}
+
+img.updateLinkOnIE {
 	border: none;
 	position: relative;
 	bottom: 9px;
